--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0cdad">  <td>18/11/20 13:19:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@5b94b04d]">TC01</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="c0cdad">  <td>18/11/20 13:19:25</td>   <td>1423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@5b94b04d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="c0cdad">  <td>18/11/20 13:19:16</td>   <td>-6796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@5b94b04d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC01</td> 
+  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:08</td>   <td>11331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC02</td> 
+  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:19</td>   <td>21954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC03</td> 
+  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:31</td>   <td>34461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC04</td> 
+  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:42</td>   <td>45182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC05</td> 
+  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:57</td>   <td>59696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC06</td> 
+  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:01</td>   <td>4343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:12</td>   <td>14683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:24</td>   <td>27427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:35</td>   <td>37954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:49</td>   <td>52368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:27:08</td>   <td>71322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:25:50</td>   <td>-7115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:02</td>   <td>4963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:12</td>   <td>15275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:25</td>   <td>28034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:35</td>   <td>38565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/20 17:26:50</td>   <td>52962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
 </table>
