--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:25:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:25:57</td>   <td>7115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC01</td> 
-  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:01</td>   <td>11458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:02</td>   <td>12078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:08</td>   <td>18446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC02</td> 
-  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:12</td>   <td>21798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:12</td>   <td>22390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:19</td>   <td>29069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC03</td> 
-  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:24</td>   <td>34542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:25</td>   <td>35149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:31</td>   <td>41576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC04</td> 
-  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:35</td>   <td>45069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:35</td>   <td>45680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:42</td>   <td>52297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC05</td> 
-  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:49</td>   <td>59483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:50</td>   <td>60077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:26:57</td>   <td>66811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@6a2f6f80]">TC06</td> 
-  <td>main@20094719</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/20 17:27:08</td>   <td>78437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6a2f6f80]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@20094719</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>18/11/21 01:28:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@7ee8290b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1600667055</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>18/11/21 01:28:38</td>   <td>6984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@7ee8290b]">TC07</td> 
+  <td>main@1600667055</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>18/11/21 01:28:39</td>   <td>8010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@7ee8290b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1600667055</td>   <td></td> </tr>
 </table>
